--- a/basal_area.Rmd
+++ b/basal_area.Rmd
@@ -1,5 +1,20 @@
-############################################################################
-### PACKAGES AND DATA
+---
+title: "\\textbf{Basal area}"
+author: "\\textbf{Tim White}"
+date: "\\textbf{June 2024}"
+output: pdf_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE,
+                      fig.height=3, fig.width=5, fig.align='center')
+```
+
+
+
+# Packages and data
+
+```{r}
 library(car)
 library(tidyverse)
 
@@ -31,32 +46,45 @@ plot_theme <- theme(plot.background = element_rect(fill = "white"),
                     legend.position = c(0.9, 0.85),
                     legend.title = element_text(color = "black", face = "bold", hjust = 0.5),
                     legend.text = element_text(color = "black"))
-############################################################################
+```
 
-############################################################################
-### 1A: BASAL AREA (ALL SIZE CLASSES EXCEPT SEEDLINGS AND SAPLINGS)
 
-### Figures
 
-# Histogram of total basal area for all plots, harvested plots, unharvested plots
+# Figures
+
+## Histograms of total basal area of trees
+
+```{r}
+# All plots
 data_plots %>%
   ggplot() +
     geom_histogram(aes(x = ba_totaltrees), bins = 10, fill = "gray90", col = "black") +
     theme_classic() + ylim(c(0,20))
 
+# Harvested vs. unharvested plots
 data_plots %>%
   ggplot() +
   geom_histogram(aes(x = ba_totaltrees), bins = 5, fill = "gray90", col = "black") +
   facet_wrap(~harvested) +
   theme_classic() + ylim(c(0,20))
+```
 
-# Five-number summary of total basal area for all plots, harvested plots, unharvested plots
+## Five-number summaries of total basal area of trees
+
+```{r}
+# All plots
 summary(data_plots$ba_totaltrees)
+
+# Harvested vs. unharvested plots
 data_plots %>% filter(harvested == "yes") %>% pull(ba_totaltrees) %>% summary()
 data_plots %>% filter(harvested == "no") %>% pull(ba_totaltrees) %>% summary()
+```
 
-# Box plot of Total BA (m2/ha) by harvested
-data_plots %>%
+## Box plots of total basal area of trees
+
+```{r}
+# By harvesting status
+ba_fig1 <- data_plots %>%
   mutate(harvested = fct_recode(harvested,
                                 "Harvested" = "yes", "Unharvested" = "no")) %>%
   ggplot() +
@@ -67,9 +95,11 @@ data_plots %>%
     plot_theme +
     coord_cartesian(ylim = c(0, 15)) +
     labs(x = "Plot status", y = "Total basal area of trees (m2 per hectare)")
+ggsave("figures/ba_fig1.png", height = 4, width = 6)
+ba_fig1
 
-# Box plot of Total BA (m2/ha) by vegetation type
-data_plots %>%
+# By vegetation type
+ba_fig2 <- data_plots %>%
   mutate(vegetation_type = fct_recode(vegetation_type,
                                       "Ju'uche'" = "juuche",
                                       "Keelenche'" = "keelenche",
@@ -81,9 +111,11 @@ data_plots %>%
   plot_theme +
   coord_cartesian(ylim = c(0, 15)) +
   labs(x = "Vegetation type", y = "Total basal area of trees (m2 per hectare)")
+ggsave("figures/ba_fig2.png", height = 4, width = 6)
+ba_fig2
 
-# Box plot of Total BA (m2/ha) by milpa
-data_plots %>%
+# By milpa
+ba_fig3 <- data_plots %>%
   mutate(milpa = fct_recode(milpa,
                             "Yes" = "yes", "No" = "no")) %>%
   ggplot() +
@@ -93,47 +125,69 @@ data_plots %>%
   plot_theme +
   coord_cartesian(ylim = c(0, 15)) +
   labs(x = "Milpa exposure", y = "Total basal area of trees (m2 per hectare)")
+ggsave("figures/ba_fig3.png", height = 4, width = 6)
+ba_fig3
+```
 
-# Interaction plots
+## Interaction plots
+
+```{r}
+par(mfrow = c(1,3))
 with(data_plots, {interaction.plot(vegetation_type, milpa, ba_totaltrees)
                   interaction.plot(milpa, harvested, ba_totaltrees)
                   interaction.plot(vegetation_type, harvested, ba_totaltrees)})
+```
 
 
 
-### Model
+# Models
 
-# Fit full model
-mod.1a <- lm(ba_totaltrees ~ harvested + vegetation_type + milpa +
+## Fit model and check assumptions
+
+```{r}
+mod <- lm(ba_totaltrees ~ harvested + vegetation_type + milpa +
               harvested:vegetation_type + harvested:milpa, data = data_plots)
 
-# Check constant variance and normality assumptions
-plot(mod.1a, which = 1); plot(mod.1a, which = 2)
+par(mfrow = c(1,2))
+plot(mod, which = 1:2)
+```
 
+## Attempt transformation of response
+
+```{r}
 # Residuals vs. fitted looks pretty good, but we can try Box-Cox just to be safe
-MASS::boxcox(mod.1a)
+MASS::boxcox(mod)
 
 # Box-Cox suggests log transformation; re-fit model with log response
-mod.1a.transform <- lm(log(ba_totaltrees) ~ harvested + vegetation_type + milpa +
+mod.transform <- lm(log(ba_totaltrees) ~ harvested + vegetation_type + milpa +
                         harvested:vegetation_type + harvested:milpa, data = data_plots)
 
 # Check constant variance and normality assumptions
-plot(mod.1a.transform, which = 1); plot(mod.1a.transform, which = 2)
+par(mfrow = c(1,2))
+plot(mod.transform, which = 1:2)
+```
 
-# Assumptions look about the same; for the sake of interpretability, we decide to go with the untransformed model
+Assumptions look about the same. For the sake of interpretability, we decide to go with the untransformed model.
+
+## Summarize selected model and run ANOVA
+
+```{r}
 # Check for outliers
-outlierTest(mod.1a)
+outlierTest(mod)
 
 # No significant outliers; look at model summary
-summary(mod.1a)
-# R^2 is relatively low
+summary(mod)
 
 # Construct ANOVA table (use type 2 SS since data are unbalanced)
-Anova(mod.1a, type = 2)
+Anova(mod, type = 2)
+```
 
-# We find that no predictors are significant
+We find that no predictors are significant.
 
+## Pairwise comparisons
+
+```{r}
 # Confirm lack of significance of harvested using Tukey HSD
-TukeyHSD(aov(mod.1a), "harvested", conf.level = 0.95)
 # Unharvested plots have higher BA than harvested plots, but difference is not significant
-############################################################################
+TukeyHSD(aov(mod), "harvested", conf.level = 0.95)
+```
