--- a/proportion_cut.Rmd
+++ b/proportion_cut.Rmd
@@ -1,5 +1,20 @@
-############################################################################
-### PACKAGES AND DATA
+---
+title: "\\textbf{Proportion of cut trees in harvested plots}"
+author: "\\textbf{Tim White}"
+date: "\\textbf{June 2024}"
+output: pdf_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE,
+                      fig.height=3, fig.width=5, fig.align='center')
+```
+
+
+
+# Packages and data
+
+```{r}
 library(readxl)
 library(tidyverse)
 
@@ -21,13 +36,16 @@ plot_theme <- theme(plot.background = element_rect(fill = "white"),
                     legend.position = c(0.9, 0.85),
                     legend.title = element_text(color = "black", face = "bold", hjust = 0.5),
                     legend.text = element_text(color = "black"))
-############################################################################
+```
 
-############################################################################
-### CLEAN DATA
 
+
+# Clean data
+
+Note that "cortado" and "cut" are used interchangeably throughout this document.
+
+```{r}
 # Remove unnecessary columns from orig_all_data
-# Note: cortado = cut
 prop_cortado_data <- orig_all_data %>%
                       select(plot_id = `Plot #`,
                              tree_id  = `ID #`,
@@ -47,32 +65,31 @@ prop_cortado <- prop_cortado_data %>%
                             proportion_cortado = num_cortado/num_total) %>%
                   mutate(plot_id = as.factor(plot_id),
                          harvested = as.factor(harvested))
-############################################################################
+```
 
-############################################################################
-### SUMMARY AND FIGURES
 
-# Proportion of trees in harvested plots that are cortado
-prop_cortado %>%
-  filter(harvested == "yes") %>%
-  ggplot() +
-    geom_histogram(aes(x = proportion_cortado), fill = "gray90", col = "black") +
-    labs(x = "Proportion of trees that are cut") +
-    theme_classic()
 
+# Summary and figures
+
+## Numerical summaries
+
+```{r}
+# We find that the proportion of trees in harvested plots that are cortado ranges from 0% to 25%
+# The mean proportion is 10.6%, and the median proportion is 9.1%
 prop_cortado %>%
   filter(harvested == "yes") %>%
   pull(proportion_cortado) %>% summary()
-# We find that the proportion of trees in harvested plots that are cortado ranges from 0% to 25%
-# The mean proportion is 10.6%, and the median proportion is 9.1%
 
 # In all harvested plots, there are 66 cortado trees and 698 total trees for a proportion of 9.5%
 prop_cortado %>%
   filter(harvested == "yes") %>%
   summarize(sum(num_cortado) / sum(num_total))
+```
 
-# Bar plot
-prop_cortado %>%
+## Bar plots
+
+```{r}
+propcut_fig1 <- prop_cortado %>%
   filter(harvested == "yes") %>%
   ggplot() +
     geom_bar(aes(x = as.factor(1:26), y = proportion_cortado),
@@ -81,9 +98,10 @@ prop_cortado %>%
     plot_theme +
     geom_hline(yintercept = 0) +
     labs(x = "Plot ID", y = "Proportion of individuals that are cut")
+ggsave("figures/propcut_fig1.png", height = 4, width = 6)
+propcut_fig1
 
-# Stacked bar plot
-prop_cortado %>%
+propcut_fig2 <- prop_cortado %>%
   filter(harvested == "yes") %>%
   mutate(num_not_cortado = num_total - num_cortado) %>%
   pivot_longer(cols = c(num_cortado, num_not_cortado), names_prefix = "num_",
@@ -101,4 +119,6 @@ prop_cortado %>%
        x = "Plot ID", y = "Number of individuals") +
   geom_hline(yintercept = 0) +
   guides(fill = guide_legend(title = "Status"))
-############################################################################
+ggsave("figures/propcut_fig2.png", height = 4, width = 6)
+propcut_fig2
+```
