--- a/stem_density_by_size_class.Rmd
+++ b/stem_density_by_size_class.Rmd
@@ -1,5 +1,20 @@
-############################################################################
-### PACKAGES AND DATA
+---
+title: "\\textbf{Stem density by size class}"
+author: "\\textbf{Tim White}"
+date: "\\textbf{June 2024}"
+output: pdf_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE,
+                      fig.height=4, fig.width=8, fig.align='center')
+```
+
+
+
+# Packages, data, and functions
+
+```{r}
 library(car)
 library(tidyverse)
 
@@ -14,6 +29,17 @@ data_plots <- read_csv("data/data_plots.csv") %>%
                        harvested = as.factor(harvested),
                        vegetation_type = as.factor(vegetation_type),
                        milpa = as.factor(milpa))
+
+compute_bootstrap_interval <- function(var, statistic = mean, num_iters = 50000, 
+                                       percentiles = c(0.025, 0.975)) {
+  boot_samples <- numeric(num_iters)
+  
+  for (i in 1:num_iters) {
+    boot_samples[i] <- statistic(sample(var, size = length(var), replace = TRUE))
+  }
+  
+  return(quantile(boot_samples, percentiles))
+}
 
 plot_theme <- theme(plot.background = element_rect(fill = "white"),
                     plot.title = element_blank(), 
@@ -31,24 +57,17 @@ plot_theme <- theme(plot.background = element_rect(fill = "white"),
                     legend.position = c(0.9, 0.85),
                     legend.title = element_text(color = "black", face = "bold", hjust = 0.5),
                     legend.text = element_text(color = "black"))
-############################################################################
+```
 
-############################################################################
-### 2A: STEM DENSITY BY SIZE CLASS (FIGURES)
 
-### Average stem density by size class
 
-compute_bootstrap_interval <- function(var, statistic = mean, num_iters = 50000, 
-                                       percentiles = c(0.025, 0.975)) {
-  boot_samples <- numeric(num_iters)
-  
-  for (i in 1:num_iters) {
-    boot_samples[i] <- statistic(sample(var, size = length(var), replace = TRUE))
-  }
-  
-  return(quantile(boot_samples, percentiles))
-}
+# Figures
 
+## Average stem density by size class
+
+### Compute boostrap intervals and organize data
+
+```{r}
 harvested <- data_plots %>%
               filter(harvested == "yes") %>%
               select(stemden_seedlings, stemden_saplings,
@@ -86,19 +105,24 @@ stemden_mean_data <- data_plots %>%
                                                     "Harvested" = "yes", "Unharvested" = "no"))
 stemden_mean_data_noseedlings <- stemden_mean_data %>%
                                   filter(size_class != "seedlings") %>%
-                                  mutate(size_class = fct_recode(size_class,
-                                                                 "Saplings (0-4 cm DBH)" = "saplings",
-                                                                 "Trees (5-9 cm DBH)" = "trees05to09",
-                                                                 "Trees (10-14 cm DBH)" = "trees10to14",
-                                                                 "Trees (15-19 cm DBH)" = "trees15to19",
-                                                                 "Trees (20+ cm DBH)" = "trees20plus"))
+                                  mutate(size_class =
+                                           fct_recode(size_class,
+                                                      "Saplings (0-4 cm DBH)" = "saplings",
+                                                      "Trees (5-9 cm DBH)" = "trees05to09",
+                                                      "Trees (10-14 cm DBH)" = "trees10to14",
+                                                      "Trees (15-19 cm DBH)" = "trees15to19",
+                                                      "Trees (20+ cm DBH)" = "trees20plus"))
 stemden_mean_data_seedlings <- stemden_mean_data %>%
                                 filter(size_class == "seedlings") %>%
                                 mutate(size_class = fct_recode(size_class,
-                                                               "Seedlings (0 cm DBH)" = "seedlings"))
-  
-# Point/line plot (all size classes except seedlings)
-stemden_mean_data_noseedlings %>%
+                                                        "Seedlings (0 cm DBH)" = "seedlings"))
+```
+
+### Pointrange plots
+
+```{r}
+# All size classes except seedlings
+stemden_sizeclass_fig1_noseedlings <- stemden_mean_data_noseedlings %>%
   ggplot() +
     geom_pointrange(aes(x = size_class, col = fct_relevel(harvested, "Harvested", "Unharvested"),
                         ymin = lower, y = mean, ymax = upper),
@@ -109,9 +133,11 @@ stemden_mean_data_noseedlings %>%
     scale_color_brewer(palette = "Dark2") +
     labs(x = "Size class", y = "Average number of stems per hectare") +
     guides(col=guide_legend(title = "Plot status"))
+ggsave("figures/stemden_sizeclass_fig1_noseedlings.png", height = 4, width = 8)
+stemden_sizeclass_fig1_noseedlings
 
-# Point/line plot (seedlings only)
-stemden_mean_data_seedlings %>%
+# Seedlings only
+stemden_sizeclass_fig1_seedlings <- stemden_mean_data_seedlings %>%
   ggplot() +
   geom_pointrange(aes(x = size_class, col = fct_relevel(harvested, "Harvested", "Unharvested"),
                       ymin = lower, y = mean, ymax = upper),
@@ -122,9 +148,15 @@ stemden_mean_data_seedlings %>%
   scale_color_brewer(palette = "Dark2") +
   labs(x = "Size class", y = "Average number of stems per hectare") +
   guides(col=guide_legend(title = "Plot status"))
+ggsave("figures/stemden_sizeclass_fig1_seedlings.png", height = 4, width = 8)
+stemden_sizeclass_fig1_seedlings
+```
 
-# Bar plot (all size classes except seedlings)
-stemden_mean_data_noseedlings %>%
+### Bar plots
+
+```{r}
+# All size classes except seedlings
+stemden_sizeclass_fig2_noseedlings <- stemden_mean_data_noseedlings %>%
   ggplot(aes(x = size_class,
              fill = fct_relevel(harvested, "Harvested", "Unharvested"))) +
     geom_col(aes(y = mean),
@@ -137,9 +169,11 @@ stemden_mean_data_noseedlings %>%
     scale_fill_brewer(palette = "Dark2") +
     labs(x = "Size class", y = "Average number of stems per hectare") +
     guides(fill=guide_legend(title = "Plot status"))
+ggsave("figures/stemden_sizeclass_fig2_noseedlings.png", height = 4, width = 8)
+stemden_sizeclass_fig2_noseedlings
 
-# Bar plot (seedlings only)
-stemden_mean_data_seedlings %>%
+# Seedlings only
+stemden_sizeclass_fig2_seedlings <- stemden_mean_data_seedlings %>%
   ggplot(aes(x = size_class,
              fill = fct_relevel(harvested, "Harvested", "Unharvested"))) +
   geom_col(aes(y = mean),
@@ -152,12 +186,15 @@ stemden_mean_data_seedlings %>%
   scale_fill_brewer(palette = "Dark2") +
   labs(x = "Size class", y = "Average number of stems per hectare") +
   guides(fill=guide_legend(title = "Plot status"))
+ggsave("figures/stemden_sizeclass_fig2_seedlings.png", height = 4, width = 8)
+stemden_sizeclass_fig2_seedlings
+```
 
+## Distribution of stem densities by size class
 
+### Organize data
 
-### Distribution of stem densities by size class
-
-# Box plot (all size classes except seedlings)
+```{r}
 stemden_dist_data <- data_plots %>%
                       select(harvested, stemden_seedlings,
                              stemden_saplings, starts_with("stemden_trees")) %>%
@@ -171,19 +208,23 @@ stemden_dist_data <- data_plots %>%
                                                     "Unharvested" = "no"))
 stemden_dist_data_noseedlings <- stemden_dist_data %>%
                                     filter(size_class != "seedlings") %>%
-                                    mutate(size_class = fct_recode(size_class,
-                                                                   "Saplings (0-4 cm DBH)" = "saplings",
-                                                                   "Trees (5-9 cm DBH)" = "trees05to09",
-                                                                   "Trees (10-14 cm DBH)" = "trees10to14",
-                                                                   "Trees (15-19 cm DBH)" = "trees15to19",
-                                                                   "Trees (20+ cm DBH)" = "trees20plus"))
+                                    mutate(size_class =
+                                             fct_recode(size_class,
+                                                        "Saplings (0-4 cm DBH)" = "saplings",
+                                                        "Trees (5-9 cm DBH)" = "trees05to09",
+                                                        "Trees (10-14 cm DBH)" = "trees10to14",
+                                                        "Trees (15-19 cm DBH)" = "trees15to19",
+                                                        "Trees (20+ cm DBH)" = "trees20plus"))
 stemden_dist_data_seedlings <- stemden_dist_data %>%
                                 filter(size_class == "seedlings") %>%
                                 mutate(size_class = fct_recode(size_class,
-                                                               "Seedlings (0 cm DBH)" = "seedlings"))
+                                                       "Seedlings (0 cm DBH)" = "seedlings"))
+```
 
+### Violin plots
 
-# Violin plot (all size classes except seedlings)
+```{r}
+# All size classes except seedlings
 stemden_dist_data_noseedlings %>%
   ggplot() +
     geom_violin(aes(x = size_class, y = num_stems,
@@ -196,7 +237,7 @@ stemden_dist_data_noseedlings %>%
     labs(x = "Size class", y = "Number of stems per hectare") +
     guides(fill = guide_legend(title = "Plot status"))
 
-# Violin plot (seedlings only)
+# Seedlings only
 stemden_dist_data_seedlings %>%
   ggplot() +
     geom_violin(aes(x = size_class, y = num_stems,
@@ -207,9 +248,13 @@ stemden_dist_data_seedlings %>%
     scale_fill_brewer(palette = "Dark2") +
     labs(x = "Size class", y = "Number of stems per hectare") +
     guides(fill=guide_legend(title = "Plot status"))
+```
 
-# Box plot (all size classes except seedlings)
-stemden_dist_data_noseedlings %>%
+### Box plots
+
+```{r}
+# All size classes except seedlings
+stemden_sizeclass_fig3_noseedlings <- stemden_dist_data_noseedlings %>%
   ggplot() +
     geom_boxplot(aes(x = size_class, y = num_stems,
                      fill = fct_relevel(harvested, "Harvested", "Unharvested")),
@@ -220,9 +265,11 @@ stemden_dist_data_noseedlings %>%
     coord_cartesian(ylim = c(0, 1500)) + # 2 outliers not shown
     labs(x = "Size class", y = "Number of stems per hectare") +
     guides(fill = guide_legend(title = "Plot status"))
+ggsave("figures/stemden_sizeclass_fig3_noseedlings.png", height = 4, width = 8)
+stemden_sizeclass_fig3_noseedlings
 
-# Box plot (seedlings only)
-stemden_dist_data_seedlings %>%
+# Seedlings only
+stemden_sizeclass_fig3_seedlings <- stemden_dist_data_seedlings %>%
   ggplot() +
   geom_boxplot(aes(x = size_class, y = num_stems,
                    fill = fct_relevel(harvested, "Harvested", "Unharvested")),
@@ -232,12 +279,17 @@ stemden_dist_data_seedlings %>%
   scale_fill_brewer(palette = "Dark2") +
   labs(x = "Size class", y = "Number of stems per hectare") +
   guides(fill = guide_legend(title = "Plot status"))
-############################################################################
+ggsave("figures/stemden_sizeclass_fig3_seedlings.png", height = 4, width = 8)
+stemden_sizeclass_fig3_seedlings
+```
 
-############################################################################
-### 2B: STEM DENSITY BY SIZE CLASS (MODELS)
 
-# Histogram of # stems per ha by size class for all plots, harvested plots, unharvested plots
+
+## Stem density by size class for different covariates
+
+### Histograms, harvesting status
+
+```{r}
 data_plots %>%
   ggplot() + geom_histogram(aes(x = stemden_seedlings), bins = 20,
                             col = "black", fill = "gray80") + plot_theme
@@ -256,8 +308,11 @@ data_plots %>%
 data_plots %>%
   ggplot() + geom_histogram(aes(x = stemden_trees20plus), bins = 5,
                             col = "black", fill = "gray80") + plot_theme
+```
 
-# Five-number summary of # stems per ha by size class for all plots, harvested plots, unharvested plots
+### Five-number summaries, harvesting status
+
+```{r}
 summary(data_plots$stemden_seedlings)
 data_plots %>% filter(harvested == "yes") %>% pull(stemden_seedlings) %>% summary()
 data_plots %>% filter(harvested == "no") %>% pull(stemden_seedlings) %>% summary()
@@ -281,68 +336,81 @@ data_plots %>% filter(harvested == "no") %>% pull(stemden_trees15to19) %>% summa
 summary(data_plots$stemden_trees20plus)
 data_plots %>% filter(harvested == "yes") %>% pull(stemden_trees20plus) %>% summary()
 data_plots %>% filter(harvested == "no") %>% pull(stemden_trees20plus) %>% summary()
+```
 
-# Box plot of # stems per ha by harvested for each size class
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = harvested, y = stemden_seedlings,
-                   fill = harvested)) + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = harvested, y = stemden_saplings,
-                   fill = harvested)) + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = harvested, y = stemden_trees05to09,
-                   fill = harvested)) + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = harvested, y = stemden_trees10to14,
-                   fill = harvested)) + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = harvested, y = stemden_trees15to19,
-                   fill = harvested)) + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = harvested, y = stemden_trees20plus,
-                   fill = harvested)) + plot_theme
+### Box plots, harvesting status
 
-# Box plot of # stems per ha by vegetation type for each size class
+```{r}
 data_plots %>% ggplot() +
-    geom_boxplot(aes(x = vegetation_type, y = stemden_seedlings,
-                     fill = vegetation_type)) + plot_theme
+  geom_boxplot(aes(x = harvested, y = stemden_seedlings),
+               col = "black", fill = "gray80") + plot_theme
 data_plots %>% ggplot() +
-  geom_boxplot(aes(x = vegetation_type, y = stemden_saplings,
-                   fill = vegetation_type)) + plot_theme
+  geom_boxplot(aes(x = harvested, y = stemden_saplings),
+               col = "black", fill = "gray80") + plot_theme
 data_plots %>% ggplot() +
-  geom_boxplot(aes(x = vegetation_type, y = stemden_trees05to09,
-                   fill = vegetation_type)) + plot_theme
+  geom_boxplot(aes(x = harvested, y = stemden_trees05to09),
+               col = "black", fill = "gray80") + plot_theme
 data_plots %>% ggplot() +
-  geom_boxplot(aes(x = vegetation_type, y = stemden_trees10to14,
-                   fill = vegetation_type)) + plot_theme
+  geom_boxplot(aes(x = harvested, y = stemden_trees10to14),
+               col = "black", fill = "gray80") + plot_theme
 data_plots %>% ggplot() +
-  geom_boxplot(aes(x = vegetation_type, y = stemden_trees15to19,
-                   fill = vegetation_type)) + plot_theme
+  geom_boxplot(aes(x = harvested, y = stemden_trees15to19),
+               col = "black", fill = "gray80") + plot_theme
 data_plots %>% ggplot() +
-  geom_boxplot(aes(x = vegetation_type, y = stemden_trees20plus,
-                   fill = vegetation_type)) + plot_theme
+  geom_boxplot(aes(x = harvested, y = stemden_trees20plus),
+               col = "black", fill = "gray80") + plot_theme
+```
 
-# Box plot of # stems per ha by milpa for each size class
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = milpa, y = stemden_seedlings,
-                   fill = milpa)) + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = milpa, y = stemden_saplings,
-                   fill = milpa)) + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = milpa, y = stemden_trees05to09,
-                   fill = milpa)) + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = milpa, y = stemden_trees10to14,
-                   fill = milpa)) + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = milpa, y = stemden_trees15to19,
-                   fill = milpa)) + plot_theme
-data_plots %>% ggplot() +
-  geom_boxplot(aes(x = milpa, y = stemden_trees20plus,
-                   fill = milpa)) + plot_theme
+### Box plots, vegetation type
 
-# Interaction plots for each size class
+```{r}
+data_plots %>% ggplot() +
+    geom_boxplot(aes(x = vegetation_type, y = stemden_seedlings),
+               col = "black", fill = "gray80") + plot_theme
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = vegetation_type, y = stemden_saplings),
+               col = "black", fill = "gray80") + plot_theme
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = vegetation_type, y = stemden_trees05to09),
+               col = "black", fill = "gray80") + plot_theme
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = vegetation_type, y = stemden_trees10to14),
+               col = "black", fill = "gray80") + plot_theme
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = vegetation_type, y = stemden_trees15to19),
+               col = "black", fill = "gray80") + plot_theme
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = vegetation_type, y = stemden_trees20plus),
+               col = "black", fill = "gray80") + plot_theme
+```
+
+### Box plots, milpa exposure
+
+```{r}
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = milpa, y = stemden_seedlings),
+               col = "black", fill = "gray80") + plot_theme
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = milpa, y = stemden_saplings),
+               col = "black", fill = "gray80") + plot_theme
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = milpa, y = stemden_trees05to09),
+               col = "black", fill = "gray80") + plot_theme
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = milpa, y = stemden_trees10to14),
+               col = "black", fill = "gray80") + plot_theme
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = milpa, y = stemden_trees15to19),
+               col = "black", fill = "gray80") + plot_theme
+data_plots %>% ggplot() +
+  geom_boxplot(aes(x = milpa, y = stemden_trees20plus),
+               col = "black", fill = "gray80") + plot_theme
+```
+
+### Interaction plots
+
+```{r}
+par(mfrow = c(1,3))
 with(data_plots, {interaction.plot(vegetation_type, milpa, stemden_seedlings)
                   interaction.plot(milpa, harvested, stemden_seedlings)
                   interaction.plot(vegetation_type, harvested, stemden_seedlings)})
@@ -361,20 +429,27 @@ with(data_plots, {interaction.plot(vegetation_type, milpa, stemden_trees15to19)
 with(data_plots, {interaction.plot(vegetation_type, milpa, stemden_trees20plus)
                   interaction.plot(milpa, harvested, stemden_trees20plus)
                   interaction.plot(vegetation_type, harvested, stemden_trees20plus)})
+```
 
 
 
-### Models
+# Models
 
 ## Seedlings
 
-# Fit full model
+### Fit model and check assumptions
+
+```{r}
 mod.2b.seedlings <- lm(stemden_seedlings ~ harvested + vegetation_type + milpa +
                          harvested:vegetation_type + harvested:milpa, data = data_plots)
 
-# Check constant variance and normality assumptions
-plot(mod.2b.seedlings, which = 1); plot(mod.2b.seedlings, which = 2)
+par(mfrow = c(1,2))
+plot(mod.2b.seedlings, which = 1:2)
+```
 
+### Attempt transformation of response
+
+```{r}
 # There is a megaphone shape on the residuals vs. fitted; try Box-Cox
 MASS::boxcox(mod.2b.seedlings)
 
@@ -383,40 +458,55 @@ mod.2b.seedlings.transform <- lm(log(stemden_seedlings) ~ harvested + vegetation
                                    harvested:vegetation_type + harvested:milpa, data = data_plots)
 
 # Check constant variance assumption again
-plot(mod.2b.seedlings.transform, which = 1); plot(mod.2b.seedlings.transform, which = 2)
+par(mfrow = c(1,2))
+plot(mod.2b.seedlings.transform, which = 1:2)
+```
 
-# Constant variance and normality assumptions appear to be satisfied now; we proceed with the transformed model
+Constant variance and normality assumptions appear to be satisfied now. We proceed with the transformed model.
+
+### Summarize selected model and run ANOVA
+
+```{r}
 # Check for outliers
 outlierTest(mod.2b.seedlings.transform)
 
 # No significant outliers; look at model summary
 summary(mod.2b.seedlings.transform)
-# R^2 is low, which suggests poor model fit
 
 # Construct ANOVA table (use type 2 SS since data are unbalanced)
 Anova(mod.2b.seedlings.transform, type = 2)
+```
 
-# We find that vegetation_type is significant, but harvested, milpa, and the interactions terms are not
+We find that vegetation_type is significant, but harvested, milpa, and the interaction terms are not.
 
+### Pairwise comparisons
+
+```{r}
 # Pairwise comparison for vegetation_type using Tukey HSD
-TukeyHSD(aov(mod.2b.seedlings.transform), "vegetation_type", conf.level = 0.95)
-# Same conclusion as section 1B
 # Keelenche' has a significantly higher seedling density then Nuku'uch che'
+TukeyHSD(aov(mod.2b.seedlings.transform), "vegetation_type", conf.level = 0.95)
 
 # Confirm lack of significance of harvested using Tukey HSD
 TukeyHSD(aov(mod.2b.seedlings.transform), "harvested", conf.level = 0.95)
+```
 
 
 
-## Saplings
+## Saplings (0-4 cm DBH)
 
-# Fit full model
+### Fit model and check assumptions
+
+```{r}
 mod.2b.saplings <- lm(stemden_saplings ~ harvested + vegetation_type + milpa +
                         harvested:vegetation_type + harvested:milpa, data = data_plots)
 
-# Check constant variance and normality assumptions
-plot(mod.2b.saplings, which = 1); plot(mod.2b.saplings, which = 2)
+par(mfrow = c(1,2))
+plot(mod.2b.saplings, which = 1:2)
+```
 
+### Attempt transformation of response
+
+```{r}
 # Very distinct megaphone shape on the residuals vs. fitted; try Box-Cox
 MASS::boxcox(mod.2b.saplings)
 
@@ -425,43 +515,60 @@ mod.2b.saplings.transform <- lm(log(stemden_saplings) ~ harvested + vegetation_t
                                   harvested:vegetation_type + harvested:milpa, data = data_plots)
 
 # Check constant variance assumption again
-plot(mod.2b.saplings.transform, which = 1); plot(mod.2b.saplings.transform, which = 2)
+par(mfrow = c(1,2))
+plot(mod.2b.saplings.transform, which = 1:2)
+```
 
-# Assumptions look significantly better, so we will proceed with the transformed model
+Assumptions look significantly better, so we will proceed with the transformed model.
+
+### Summarize selected model and run ANOVA
+
+```{r}
 # Check for outliers
 outlierTest(mod.2b.saplings.transform)
 
 # No significant outliers; look at model summary
 summary(mod.2b.saplings.transform)
-# R^2 is relatively low
 
 # Construct ANOVA table (use type 2 SS since data are unbalanced)
 Anova(mod.2b.saplings.transform, type = 2)
+```
 
-# We find that vegetation_type and milpa are significant, but harvested and the interaction terms are not
+We find that vegetation_type and milpa are significant, but harvested and the interaction terms are not.
 
+### Pairwise comparisons
+
+```{r}
 # Pairwise comparison for vegetation_type using Tukey HSD
-TukeyHSD(aov(mod.2b.saplings.transform), "vegetation_type", conf.level = 0.95)
 # Nuku'uch che' has significantly lower sapling density than Ju'uche' and Keelenche'
+TukeyHSD(aov(mod.2b.saplings.transform), "vegetation_type", conf.level = 0.95)
 
 # Pairwise comparison for milpa using Tukey HSD
+# Plots that have been milpa have higher sapling density
+# (note that the sign flips because of the log transformation)
 TukeyHSD(aov(mod.2b.saplings.transform), "milpa", conf.level = 0.95)
-# Plots that have been milpa have higher sapling density (note that the sign flips bc of the log transformation)
 
 # Confirm lack of significance of harvested using Tukey HSD
 TukeyHSD(aov(mod.2b.saplings.transform), "harvested", conf.level = 0.95)
+```
 
 
 
-## 5-9 cm trees
+## Trees (5-9 cm DBH)
 
-# Fit full model
+### Fit model and check assumptions
+
+```{r}
 mod.2b.05to09 <- lm(stemden_trees05to09 ~ harvested + vegetation_type + milpa +
                     harvested:vegetation_type + harvested:milpa, data = data_plots)
 
-# Check constant variance and normality assumptions
-plot(mod.2b.05to09, which = 1); plot(mod.2b.05to09, which = 2)
+par(mfrow = c(1,2))
+plot(mod.2b.05to09, which = 1:2)
+```
 
+### Attempt transformation of response
+
+```{r}
 # Very distinct megaphone shape on the residuals vs. fitted; try Box-Cox
 MASS::boxcox(mod.2b.05to09)
 
@@ -470,127 +577,167 @@ mod.2b.05to09.transform <- lm(log(stemden_trees05to09) ~ harvested + vegetation_
                                 harvested:vegetation_type + harvested:milpa, data = data_plots)
 
 # Check constant variance assumption again
-plot(mod.2b.05to09.transform, which = 1); plot(mod.2b.05to09.transform, which = 2)
+par(mfrow = c(1,2))
+plot(mod.2b.05to09.transform, which = 1:2)
+```
 
-# Assumptions look significantly better, so we will proceed with the transformed model
+Assumptions look significantly better, so we will proceed with the transformed model.
+
+### Summarize selected model and run ANOVA
+
+```{r}
 # Check for outliers
 outlierTest(mod.2b.05to09.transform)
 
 # No significant outliers; look at model summary
 summary(mod.2b.05to09.transform)
-# R^2 is low
 
 # Construct ANOVA table (use type 2 SS since data are unbalanced)
 Anova(mod.2b.05to09.transform, type = 2)
+```
 
-# We find that vegetation_type is significant, but harvested, milpa, and the interaction terms are not
+We find that vegetation_type is significant, but harvested, milpa, and the interaction terms are not
 
+### Pairwise comparisons
+
+```{r}
 # Pairwise comparison for vegetation_type using Tukey HSD
-TukeyHSD(aov(mod.2b.05to09.transform), "vegetation_type", conf.level = 0.95)
 # Keelenche' has a significantly higher 5-9 cm tree density then Nuku'uch che'
+TukeyHSD(aov(mod.2b.05to09.transform), "vegetation_type", conf.level = 0.95)
 
 # Confirm lack of significance of Harvested using Tukey HSD
 TukeyHSD(aov(mod.2b.05to09.transform), "harvested", conf.level = 0.95)
+```
 
 
 
-## 10-14 cm trees
+## Trees (10-14 cm DBH)
 
-# Fit full model
+### Fit model and check assumptions
+
+```{r}
 mod.2b.10to14 <- lm(stemden_trees10to14 ~ harvested + vegetation_type + milpa +
                       harvested:vegetation_type + harvested:milpa, data = data_plots)
 
-# Check constant variance and normality assumptions
-plot(mod.2b.10to14, which = 1); plot(mod.2b.10to14, which = 2)
+plot(mod.2b.10to14, which = 1:2)
+```
 
-# Assumptions appear to be satisfied
+Assumptions appear to be satisfied.
+
+### Summarize selected model and run ANOVA
+
+```{r}
 # Check for outliers
 outlierTest(mod.2b.10to14)
 
 # No significant outliers; look at model summary
 summary(mod.2b.10to14)
-# R^2 is low
 
 # Construct ANOVA table (use type 2 SS since data are unbalanced)
 Anova(mod.2b.10to14, type = 2)
+```
 
-# We find that vegetation_type is significant, but harvested, milpa, and the interaction terms are not
+We find that vegetation_type is significant, but harvested, milpa, and the interaction terms are not.
 
+### Pairwise comparisons
+
+```{r}
 # Pairwise comparison for vegetation_type using Tukey HSD
-TukeyHSD(aov(mod.2b.10to14), "vegetation_type", conf.level = 0.95)
 # Keelenche' has a significantly higher 10-14 cm tree density then Nuku'uch che'
+TukeyHSD(aov(mod.2b.10to14), "vegetation_type", conf.level = 0.95)
 
 # Confirm lack of significance of harvested using Tukey HSD
 TukeyHSD(aov(mod.2b.10to14), "harvested", conf.level = 0.95)
+```
 
 
 
-## 15-19 cm trees
+## Trees (15-19 cm DBH)
 
-# Fit full model
+### Fit model and check assumptions
+
+```{r}
 mod.2b.15to19 <- lm(stemden_trees15to19 ~ harvested + vegetation_type + milpa +
                       harvested:vegetation_type + harvested:milpa, data = data_plots)
 
-# Check constant variance and normality assumptions
-plot(mod.2b.15to19, which = 1); plot(mod.2b.15to19, which = 2)
+plot(mod.2b.15to19, which = 1:2)
+```
 
-# Constant variance and normality assumptions appear to be satisfied
+Constant variance and normality assumptions appear to be satisfied.
 
+### Summarize selected model and run ANOVA
+
+```{r}
 # Look at model summary
 summary(mod.2b.15to19)
-# R^2 is low
 
 # Construct ANOVA table (use type 2 SS since data are unbalanced)
 Anova(mod.2b.15to19, type = 2)
+```
 
-# We find that no predictors are significant
+We find that no predictors are significant.
 
-# Confirm lack of significance of Harvested using Tukey HSD
+### Pairwise comparisons
+
+```{r}
+# Confirm lack of significance of harvested using Tukey HSD
 TukeyHSD(aov(mod.2b.15to19), "harvested", conf.level = 0.95)
+```
 
 
 
-## 20+ cm trees
+## Trees (20+ cm DBH)
 
-# Fit full model
+### Fit model and check assumptions
+
+```{r}
 mod.2b.20plus <- lm(stemden_trees20plus ~ harvested + vegetation_type + milpa +
                       harvested:vegetation_type + harvested:milpa, data = data_plots)
 
-# Check constant variance and normality assumptions
-plot(mod.2b.20plus, which = 1); plot(mod.2b.20plus, which = 2)
+par(mfrow = c(1,2))
+plot(mod.2b.20plus, which = 1:2)
+```
 
-# There is a little bit of a megaphone shape on the residuals vs. fitted.
-# We can't do a log transformation since the response has zeros.
-# Try square root transformation
+There is a little bit of a megaphone shape on the residuals vs. fitted. We can't do a log transformation since the response has zeros, so we'll try a square root transformation.
+
+### Attempt transformation of response
+
+```{r}
 mod.2b.20plus.transform <- lm(sqrt(stemden_trees20plus) ~ harvested + vegetation_type + milpa +
                                 harvested:vegetation_type + harvested:milpa, data = data_plots)
 
 # Check constant variance assumption again
-plot(mod.2b.20plus.transform, which = 1); plot(mod.2b.20plus.transform, which = 2)
+par(mfrow = c(1,2))
+plot(mod.2b.20plus.transform, which = 1:2)
+```
 
-# No substantial improvement in assumptions, so we will proceed with the untransformed model
+No substantial improvement in assumptions, so we will proceed with the untransformed model.
 
+### Summarize selected model and run ANOVA
+
+```{r}
 # Look at model summary
 summary(mod.2b.20plus)
-# R^2 is relatively low
 
 # Construct ANOVA table (use type 2 SS since data are unbalanced)
 Anova(mod.2b.20plus, type = 2)
+```
 
-# We find that vegetation_type and milpa are significant, but Harvested and the interaction terms are not
+We find that vegetation type and milpa are significant, but Harvested and the interaction terms are not
 
-# Pairwise comparison for vegetation_type using Tukey HSD
-TukeyHSD(aov(mod.2b.20plus), "vegetation_type", conf.level = 0.95)
+### Pairwise comparisons
+
+```{r}
+# Pairwise comparison for vegetation type using Tukey HSD
 # Nuku'uch che' has significantly HIGHER 20+ cm tree density than ju'uche' and keelenche';
 # no significant difference between the latter two
-# This is different from previous significant vegetation_type results; for total stems (1B)
-# and seedlings (2B), nuku'uch'che' had a significantly lower stem density than the other levels
+TukeyHSD(aov(mod.2b.20plus), "vegetation_type", conf.level = 0.95)
 
 # Pairwise comparison for milpa using Tukey HSD
+# Plots that have been milpa have a significantly higher 20+ cm tree density than
+# plots that have not been milpa
 TukeyHSD(aov(mod.2b.20plus), "milpa", conf.level = 0.95)
-# Plots that have been milpa have a significantly higher 20+ cm tree density than plots that have not been milpa
-# This is consistent with all earlier results involving Milpa
 
 # Confirm lack of significance of harvested using Tukey HSD
 TukeyHSD(aov(mod.2b.20plus), "harvested", conf.level = 0.95)
-############################################################################
+```
