Add notebook with final models and output

--- a/clean_data.Rmd
+++ b/clean_data.Rmd
@@ -3,6 +3,8 @@ title: "\\textbf{Clean data}"
 author: "\\textbf{Tim White}"
 date: "\\textbf{June 2024}"
 output: pdf_document
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding, output_dir = "pdfs") })
 ---
 
 ```{r setup, include=FALSE}
