--- a/basal_area_by_size_class.Rmd
+++ b/basal_area_by_size_class.Rmd
@@ -3,6 +3,8 @@ title: "\\textbf{Basal area by size class}"
 author: "\\textbf{Tim White}"
 date: "\\textbf{June 2024}"
 output: pdf_document
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding, output_dir = "pdfs") })
 ---
 
 ```{r setup, include=FALSE}
