--- a/proportion_cut.Rmd
+++ b/proportion_cut.Rmd
@@ -3,6 +3,8 @@ title: "\\textbf{Proportion of cut trees in harvested plots}"
 author: "\\textbf{Tim White}"
 date: "\\textbf{June 2024}"
 output: pdf_document
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding, output_dir = "pdfs") })
 ---
 
 ```{r setup, include=FALSE}
